# flower-classifier

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
configs/: config.yaml  data.yaml  logging.yaml  train.yaml
configs/model/: cnn.yaml  vit.yaml
data/: .gitignore  dataset.zip.dvc
flower_classifier/: commands.py  config.py  download_data.py  lightning_modules.py  models.py  preprocess_data.py  train.py  utils.py
