[project]
name = "flower-classifier"
version = "0.1.0"
description = "Package for developing a flower classification model using DPhi's 'Flower Recognition' competition data"
readme = "README.md"
authors = [
    { name = "Alexander Semenyuk", email = "aww.semenyuk@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "dvc>=3.64.2",
    "hydra-core>=1.3.2",
    "lightning>=2.6.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[dependency-groups]
dev = [
    "fire>=0.7.1",
    "ipykernel>=7.1.0",
    "pre-commit>=4.5.1",
]

[tool.ruff]
line-length = 100
format = { docstring-code-format = true }

[tool.ruff.lint]
select = [
    # isort
    "I",
    # pycodestyle
    "E", "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-builtins
    "A",
    # flake8-return
    "RET",
    # flake8-use-pathlib
    "PTH",
    # flynt
    "FLY",
    # mccabe
    "C90",
    # NumPy-specific rules
    "NPY",
    # pep8-naming
    "N",
    # Ruff-specific rules
    "RUF",
    # Pylint - very strict, may be use when have enough time
    "PL",
    # refurb - also may be overwhelming
    "FURB",
]

pycodestyle = { max-doc-length = 105 }
